Added inheritance to sing avatar statics and score

--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -4269,10 +4269,8 @@ Size = 20
 Align = 1
 
 [SingLyricsUpperBar]
-X = 80
-W = 640
+Inheritance = SingLyricsLowerBar
 Y = 493
-H = 41
 ;YOffSet (+/-) for the Sing-Indicator
 IndicatorYOffset = 3
 
@@ -4284,8 +4282,6 @@ H = 41
 
 # O N E  P L A Y E R   M O D E # # # # # # # # # # # # # # # # # # # #
 #PlayerOne
-
-
 [SingP1Static]
 X = 9
 Y = 258
@@ -4296,14 +4292,13 @@ Color = P1Dark
 Type = Colorized
 Alpha = 1
 
-#[SingP1Text]
-#Text = PLAYERNAME
-#X = 80
-#Y = 300
-#Font = 1
-#Size = 22
-#Color = White
-#Align = 0
+; [SingP1Text]
+; X = 65
+; Y = 300
+; Font = 1
+; Size = 24
+; Color = White
+; Align = 0
 
 [SingP1Static2]
 Tex = ScoreBG
@@ -4340,265 +4335,151 @@ Alpha = 1
 # T W O  P L A Y E R   M O D E # # # # # # # # # # # # # # # # # # # #
 #Player One
 [SingP1TwoPStatic]
+Inheritance = SingP1Static
 X = 18
 Y = 82
 W = 45
 H = 59
-Tex = AvatarFrame2
-Color = P1Dark
-Type = Colorized
-Alpha = 1
 
-#[SingP1TwoPText]
-#Text = PLAYERNAME
-#X = 80
-#Y = 112
-#Font = 1
-#Size = 22
-#Color = White
-#Align = 0
+; [SingP1TwoPText]
+; Inheritance = SingP1Text
+; X = 80
+; Y = 112
+; Size = 24
 
 [SingP1TwoPStatic2]
-Tex = ScoreBG
-X = 680
+Inheritance = SingP1Static2
 Y = 92
-W = 100
-H = 36
-Color = P1Dark
-Type = Colorized
 
 [SingP1TwoPTextScore]
-Text = 00000
-X = 698
+Inheritance = SingP1TextScore
 Y = 94
-Font = 0
-Size = 30
-Color = White
-Align = 0
 
 [SingP1TwoPSingBar]
-X = 680
+Inheritance = SingP1SingBar
 Y = 126
-W = 100
-H = 8
 
 [SingP1TwoPAvatar]
+Inheritance = SingP1SingBar
 X = 23
 Y = 88
 W = 35
 H = 47
-Z = 1
-Alpha = 1
 
 #Player Two
 [SingP2RStatic]
-X = 18
+Inheritance = SingP1TwoPStatic
 Y = 273
-W = 45
-H = 59
-Tex = AvatarFrame2
 Color = P2Dark
-Type = Colorized
-Alpha = 1
 
-#[SingP2RText]
-#Text = PLAYERNAME
-#X = 80
-#Y = 302
-#Font = 1
-#Size = 22
-#Color = White
-#Align = 0
+; [SingP2RText]
+; Inheritance = SingP1TwoPText
+; Y = 302
 
 [SingP2RStatic2]
-Tex = ScoreBG
-X = 680
+Inheritance = SingP1TwoPStatic2
 Y = 282
-W = 100
-H = 36
 Color = P2Dark
-Type = Colorized
 
 [SingP2RTextScore]
-Text = 00000
-X = 698
+Inheritance = SingP1TwoPTextScore
 Y = 284
-Font = 0
-Size = 30
-Color = White
-Align = 0
 
 [SingP2RSingBar]
-X = 680
+Inheritance = SingP1TwoPSingBar
 Y = 316
-W = 100
-H = 8
 
 [SingP2RAvatar]
-X = 23
+Inheritance = SingP1TwoPAvatar
 Y = 279
-W = 35
-H = 47
-Z = 1
-Alpha = 1
 
 # T H R E E  P L A Y E R   M O D E # # # # # # # # # # # # # # # # # # # #
 #Player One
 [SingP1ThreePStatic]
+Inheritance = SingP1TwoPStatic
 X = 16
 Y = 57
-W = 45
-H = 59
-Z = 1
-Tex = AvatarFrame2
-Color = P1Dark
-Type = Colorized
-Alpha = 1
+#Z = 1
 
-[SingP1ThreePText]
-#Text =
-#X = 27
-#Y = 66
-#Font = 1
-#Size = 24
-#Color = White
-#Align = 0
+; [SingP1ThreePText]
+; Inheritance = SingP1Text
+; X = 27
+; Y = 66
+; Size = 24
 
 [SingP1ThreePStatic2]
-Tex = ScoreBG
+Inheritance = SingP1TwoPStatic2
 X = 75
 Y = 61
-W = 100
-H = 36
-Color = P1Dark
-Type = Colorized
 
 [SingP1ThreePTextScore]
-Text = 00000
+Inheritance = SingP1TwoPTextScore
 X = 93
 Y = 63
-Font = 0
-Size = 30
-Color = White
-Align = 0
 
 [SingP1ThreePSingBar]
+Inheritance = SingP1TwoPSingBar
 X = 75
 Y = 95
-W = 100
-H = 8
 
 [SingP1ThreePAvatar]
+Inheritance = SingP1TwoPAvatar
 X = 21
 Y = 63
-W = 35
-H = 47
-Z = 1
-Alpha = 1
 
 #Player Two
 [SingP2MStatic]
+Inheritance = SingP1ThreePStatic
 X = 311
-Y = 57
-W = 45
-H = 59
-Tex = AvatarFrame2
 Color = P2Dark
-Type = Colorized
-Alpha = 1
 
-#[SingP2MText]
-#Text = P2
-#X = 321
-#Y = 66
-#Font = 1
-#Size = 24
-#Color = White
-#Align = 0
+; [SingP2MText]
+; Inheritance = SingP1ThreePText
+; X = 331
 
 [SingP2MStatic2]
-Tex = ScoreBG
+Inheritance = SingP1ThreePStatic2
 X = 370
-Y = 61
-W = 100
-H = 36
 Color = P2Dark
-Type = Colorized
 
 [SingP2MTextScore]
-Text = 00000
+Inheritance = SingP1ThreePTextScore
 X = 388
-Y = 63
-Font = 0
-Size = 30
-Color = White
-Align = 0
 
 [SingP2MSingBar]
+Inheritance = SingP1ThreePSingBar
 X = 370
-Y = 95
-W = 100
-H = 8
 
 [SingP2MAvatar]
+Inheritance = SingP1ThreePAvatar
 X = 316
-Y = 63
-W = 35
-H = 47
-Z = 1
-Alpha = 1
 
 #Player Three
 [SingP3RStatic]
+Inheritance = SingP1ThreePStatic
 X = 611
-Y = 57
-W = 45
-H = 59
-Tex = AvatarFrame2
 Color = P3Dark
-Type = Colorized
-Alpha = 1
 
-#[SingP3RText]
-#Text = P3
-#X = 621
-#Y = 66
-#Font = 1
-#Size = 24
-#Color = White
-#Align = 0
+; [SingP3RText]
+; Inheritance = SingP1ThreePText
+; X = 331
 
 [SingP3RStatic2]
-Tex = ScoreBG
+Inheritance = SingP1ThreePStatic2
 X = 670
-Y = 61
-W = 100
-H = 36
 Color = P3Dark
-Type = Colorized
 
 [SingP3RTextScore]
-Text = 00000
+Inheritance = SingP1ThreePTextScore
 X = 688
-Y = 63
-Font = 0
-Size = 30
-Color = White
-Align = 0
 
 [SingP3SingBar]
+Inheritance = SingP1ThreePSingBar
 X = 670
-Y = 95
-W = 100
-H = 8
 
 [SingP3RAvatar]
+Inheritance = SingP1ThreePAvatar
 X = 616
-Y = 63
-W = 35
-H = 47
-Z = 1
-Alpha = 1
 
 [SingSongNameStatic]
 Tex = SongName
@@ -4622,524 +4503,292 @@ Align = 1
 # FOUR  P L A Y E R   M O D E # # # # # # # # # # # # # # # # # # # #
 #Player One
 [SingP1FourPStatic]
+Inheritance = SingP1ThreePStatic
 X = 20
 Y = 54
 W = 40
 H = 54
-Tex = AvatarFrame2
-Color = P1Dark
-Type = Colorized
-Alpha = 1
 
-#[SingP1FourPText]
-#Text = PLAYERNAME
-#X = 25
-#Y = 122
-#Font = 1
-#Size = 18
-#Color = White
-#Align = 0
+; [SingP1FourPText]
+; Inheritance = SingP1Text
+; X = 25
+; Y = 122
+; Size = 18
 
 [SingP1FourPStatic2]
-Tex = ScoreBG
+Inheritance = SingP1ThreePStatic2
 X = 80
-Y = 61
-W = 100
-H = 36
-Color = P1Dark
-Type = Colorized
 
 [SingP1FourPTextScore]
-Text = 00000
+Inheritance = SingP1ThreePTextScore
 X = 98
-Y = 63
-Font = 0
-Size = 30
-Color = White
-Align = 0
 
 [SingP1FourPSingBar]
+Inheritance = SingP1ThreePSingBar
 X = 80
-Y = 95
-W = 100
-H = 8
 
 [SingP1FourPAvatar]
+Inheritance = SingP1ThreePAvatar
 X = 24
 Y = 59
 W = 32
 H = 43
-Z = 1
-Alpha = 1
 
 #Player Two
 [SingP2FourPStatic]
+Inheritance = SingP1FourPStatic
 X = 220
-Y = 54
-W = 40
-H = 54
-Tex = AvatarFrame2
 Color = P2Dark
-Type = Colorized
-Alpha = 1
 
-#[SingP2FourPText]
-#Text = PLAYERNAME
-#X = 24
-#Y = 302
-#Font = 1
-#Size = 18
-#Color = White
-#Align = 0
+; [SingP2FourPText]
+; Inheritance = SingP1FourPText
+; Y = 122
 
 [SingP2FourPStatic2]
-Tex = ScoreBG
+Inheritance = SingP1ThreePStatic2
 X = 280
-Y = 61
-W = 100
-H = 36
 Color = P2Dark
-Type = Colorized
 
 [SingP2FourPTextScore]
-Text = 00000
+Inheritance = SingP1ThreePTextScore
 X = 298
-Y = 63
-Font = 0
-Size = 30
-Color = White
-Align = 0
 
 [SingP2FourPSingBar]
+Inheritance = SingP1ThreePSingBar
 X = 280
-Y = 95
-W = 100
-H = 8
 
 [SingP2FourPAvatar]
+Inheritance = SingP1FourPAvatar
 X = 224
-Y = 59
-W = 32
-H = 43
-Z = 1
-Alpha = 1
 
 #Player Three
 [SingP3FourPStatic]
+Inheritance = SingP1FourPStatic
 X = 420
-Y = 54
-W = 40
-H = 54
-Tex = AvatarFrame2
 Color = P3Dark
-Type = Colorized
-Alpha = 1
 
-#[SingP3FourPText]
-#Text = PLAYERNAME
-#X = 395
-#Y = 122
-#Font = 1
-#Size = 18
-#Color = White
-#Align = 0
+; [SingP3FourPText]
+; Inheritance = SingP1FourPText
+; Y = 122
 
 [SingP3FourPStatic2]
-Tex = ScoreBG
+Inheritance = SingP1ThreePStatic2
 X = 480
-Y = 61
-W = 100
-H = 36
 Color = P3Dark
-Type = Colorized
 
 [SingP3FourPTextScore]
-Text = 00000
+Inheritance = SingP1ThreePTextScore
 X = 498
-Y = 63
-Font = 0
-Size = 30
-Color = White
-Align = 0
 
 [SingP3FourPSingBar]
+Inheritance = SingP1ThreePSingBar
 X = 480
-Y = 95
-W = 100
-H = 8
 
 [SingP3FourPAvatar]
+Inheritance = SingP1FourPAvatar
 X = 424
-Y = 59
-W = 32
-H = 43
-Z = 1
-Alpha = 1
 
 #Player Four
 [SingP4FourPStatic]
+Inheritance = SingP1FourPStatic
 X = 620
-Y = 54
-W = 40
-H = 54
-Tex = AvatarFrame2
 Color = P4Dark
-Type = Colorized
-Alpha = 1
 
-#[SingP4FourPText]
-#Text = PLAYERNAME
-#X = 395
-#Y = 302
-#Font = 1
-#Size = 18
-#Color = White
-#Align = 0
+; [SingP4FourPText]
+; Inheritance = SingP1FourPText
+; Y = 122
 
 [SingP4FourPStatic2]
-Tex = ScoreBG
+Inheritance = SingP1ThreePStatic2
 X = 680
-Y = 61
-W = 100
-H = 36
 Color = P4Dark
-Type = Colorized
 
 [SingP4FourPTextScore]
-Text = 00000
+Inheritance = SingP1ThreePTextScore
 X = 698
-Y = 63
-Font = 0
-Size = 30
-Color = White
-Align = 0
 
 [SingP4FourPSingBar]
+Inheritance = SingP1ThreePSingBar
 X = 680
-Y = 95
-W = 100
-H = 8
 
 [SingP4FourPAvatar]
+Inheritance = SingP1FourPAvatar
 X = 624
-Y = 59
-W = 32
-H = 43
-Z = 1
-Alpha = 1
 
 # SIX  P L A Y E R   M O D E # # # # # # # # # # # # # # # # # # # #
 #Player One
 [SingP1SixPStatic]
+Inheritance = SingP1ThreePStatic
 X = 19
 Y = 98
 W = 34
 H = 46
-Tex = AvatarFrame2
-Color = P1Dark
-Type = Colorized
-Alpha = 1
+
+; [SingP1SixPText]
+; Inheritance = SingP1Text
+; X = 25
+; Y = 122
+; Size = 18
 
 [SingP1SixPAvatar]
+Inheritance = SingP1ThreePAvatar
 X = 23
 Y = 103
 W = 26
 H = 36
-Z = 1
-Alpha = 1
-
-#[SingP1SixPText]
-#Text = PLAYERNAME
-#X = 25
-#Y = 100
-#Font = 1
-#Size = 18
-#Color = White
-#Align = 0
 
 [SingP1SixPStatic2]
-Tex = ScoreBG
+Inheritance = SingP1ThreePStatic2
 X = 20
 Y = 40
-W = 100
-H = 36
-Color = P1Dark
-Type = Colorized
 
 [SingP1SixPTextScore]
-Text = 00000
+Inheritance = SingP1ThreePTextScore
 X = 38
 Y = 42
-Font = 0
-Size = 30
-Color = White
-Align = 0
 
 [SingP1SixPSingBar]
+Inheritance = SingP1ThreePSingBar
 X = 20
 Y = 76
-W = 100
-H = 8
 
 #Player Two
 [SingP2SixPStatic]
-X = 19
+Inheritance = SingP1SixPStatic
 Y = 225
-W = 34
-H = 46
-Tex = AvatarFrame2
 Color = P2Dark
-Type = Colorized
-Alpha = 1
+
+; [SingP2SixPText]
+; Inheritance = SingP1SixPText
+; Y = 227
 
 [SingP2SixPAvatar]
-X = 23
+Inheritance = SingP1ThreePAvatar
 Y = 230
-W = 26
-H = 36
-Z = 1
-Alpha = 1
-
-#[SingP2SixPText]
-#Text = PLAYERNAME
-#X = 25
-#Y = 227
-#Font = 1
-#Size = 18
-#Color = White
-#Align = 0
 
 [SingP2SixPStatic2]
-Tex = ScoreBG
+Inheritance = SingP1SixPStatic2
 X = 150
-Y = 40
-W = 100
-H = 36
 Color = P2Dark
-Type = Colorized
 
 [SingP2SixPTextScore]
-Text = 00000
+Inheritance = SingP1SixPTextScore
 X = 168
-Y = 42
-Font = 0
-Size = 30
-Color = White
-Align = 0
 
 [SingP2SixPSingBar]
+Inheritance = SingP1SixPSingBar
 X = 150
-Y = 75
-W = 100
-H = 8
 
 #Player Three
 [SingP3SixPStatic]
-X = 19
+Inheritance = SingP1SixPStatic
 Y = 350
-W = 34
-H = 46
-Tex = AvatarFrame2
 Color = P3Dark
-Type = Colorized
-Alpha = 1
+
+; [SingP3SixPText]
+; Inheritance = SingP1SixPText
+; Y = 352
 
 [SingP3SixPAvatar]
-X = 23
+Inheritance = SingP1ThreePAvatar
 Y = 355
-W = 26
-H = 36
-Z = 1
-Alpha = 1
-
-#[SingP3SixPText]
-#Text = PLAYERNAME
-#X = 25
-#Y = 352
-#Font = 1
-#Size = 18
-#Color = White
-#Align = 0
 
 [SingP3SixPStatic2]
-Tex = ScoreBG
+Inheritance = SingP1SixPStatic2
 X = 280
-Y = 40
-W = 100
-H = 36
 Color = P3Dark
-Type = Colorized
 
 [SingP3SixPTextScore]
-Text = 00000
+Inheritance = SingP1SixPTextScore
 X = 298
-Y = 42
-Font = 0
-Size = 30
-Color = White
-Align = 0
 
 [SingP3SixPSingBar]
+Inheritance = SingP1SixPSingBar
 X = 280
-Y = 76
-W = 100
-H = 8
 
 #Player Four
 [SingP4SixPStatic]
+Inheritance = SingP1SixPStatic
 X = 389
 Y = 98
-W = 34
-H = 46
-Tex = AvatarFrame2
 Color = P4Dark
-Type = Colorized
-Alpha = 1
+
+; [SingP4SixPText]
+; Inheritance = SingP1SixPText
+; X = 395
+; Y = 100
 
 [SingP4SixPAvatar]
+Inheritance = SingP1ThreePAvatar
 X = 393
 Y = 103
-W = 26
-H = 36
-Z = 1
-Alpha = 1
-
-#[SingP4SixPText]
-#Text = PLAYERNAME
-#X = 395
-#Y = 100
-#Font = 1
-#Size = 18
-#Color = White
-#Align = 0
 
 [SingP4SixPStatic2]
-Tex = ScoreBG
+Inheritance = SingP1SixPStatic2
 X = 410
-Y = 40
-W = 100
-H = 36
 Color = P4Dark
-Type = Colorized
 
 [SingP4SixPTextScore]
-Text = 00000
+Inheritance = SingP1SixPTextScore
 X = 428
-Y = 42
-Font = 0
-Size = 30
-Color = White
-Align = 0
 
 [SingP4SixPSingBar]
+Inheritance = SingP1SixPSingBar
 X = 410
-Y = 76
-W = 100
-H = 8
 
 #Player Five
 [SingP5SixPStatic]
-X = 389
+Inheritance = SingP4SixPStatic
 Y = 225
-W = 34
-H = 46
-Tex = AvatarFrame2
 Color = P5Dark
-Type = Colorized
-Alpha = 1
+
+; [SingP5SixPText]
+; Inheritance = SingP4SixPText
+; Y = 227
 
 [SingP5SixPAvatar]
-X = 393
+Inheritance = SingP4SixPAvatar
 Y = 230
-W = 26
-H = 36
-Z = 1
-Alpha = 1
-
-#[SingP5SixPText]
-#Text = PLAYERNAME
-#X = 395
-#Y = 227
-#Font = 1
-#Size = 18
-#Color = White
-#Align = 0
 
 [SingP5SixPStatic2]
-Tex = ScoreBG
+Inheritance = SingP1SixPStatic2
 X = 540
-Y = 40
-W = 100
-H = 36
 Color = P5Dark
-Type = Colorized
 
 [SingP5SixPTextScore]
-Text = 00000
+Inheritance = SingP1SixPTextScore
 X = 558
-Y = 42
-Font = 0
-Size = 30
-Color = White
-Align = 0
 
 [SingP5SixPSingBar]
+Inheritance = SingP1SixPSingBar
 X = 540
-Y = 76
-W = 100
-H = 8
 
 #Player Six
 [SingP6SixPStatic]
-X = 389
+Inheritance = SingP4SixPStatic
 Y = 350
-W = 34
-H = 46
-Tex = AvatarFrame2
 Color = P6Dark
-Type = Colorized
-Alpha = 1
+
+; [SingP6SixPText]
+; Inheritance = SingP4SixPText
+; Y = 352
 
 [SingP6SixPAvatar]
-X = 393
+Inheritance = SingP4SixPAvatar
 Y = 355
-W = 26
-H = 36
-Z = 1
-Alpha = 1
-
-#[SingP6SixPText]
-#Text = PLAYERNAME
-#X = 395
-#Y = 352
-#Font = 1
-#Size = 18
-#Color = White
-#Align = 0
 
 [SingP6SixPStatic2]
-Tex = ScoreBG
+Inheritance = SingP1SixPStatic2
 X = 670
-Y = 40
-W = 100
-H = 36
 Color = P6Dark
-Type = Colorized
 
 [SingP6SixPTextScore]
-Text = 00000
+Inheritance = SingP1SixPTextScore
 X = 688
-Y = 42
-Font = 0
-Size = 30
-Color = White
-Align = 0
 
 [SingP6SixPSingBar]
+Inheritance = SingP1SixPSingBar
 X = 670
-Y = 76
-W = 100
-H = 8
 
 ##################################
 ##########     Duet     ##########
