Added texture type in some items to reduce log errors

--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -386,6 +386,7 @@ X = 560
 Y = 281
 W = 67
 H = 90
+Type = Transparent
 Reflection = 1
 ReflectionSpacing = 10
 
@@ -548,6 +549,7 @@ Text = SONG_MENU_PLAY
 [SongMenuSelectSlide1]
 TexSBG = Rectangle
 Text =
+Type = Transparent
 TypeSBG = Colorized
 ShowArrows = 1
 OneItemOnly = 1
@@ -591,27 +593,8 @@ Z = 0.97
 # shows up instead of Button 2
 # in some song menus
 [SongMenuSelectSlide2]
-TexSBG = Rectangle
-Text =
-TypeSBG = Colorized
-ShowArrows = 1
-OneItemOnly = 1
-X = 280
+Inheritance = SongMenuSelectSlide1
 Y = 85
-W = 0
-H = 25
-Z = 0.97
-SkipX = 0
-SBGW = 220
-TextSize = 24
-Color = ColorLight
-DColor = ColorDark
-TColor = White
-TDColor = White
-SBGColor = ColorLight
-SBGDColor = ColorDark
-STColor = White
-STDColor = White
 
 [SongMenuButton3]
 X = 280
@@ -638,27 +621,8 @@ Z = 0.97
 # shows up instead of BUtton 3
 # in some song menus
 [SongMenuSelectSlide3]
-TexSBG = Rectangle
-Text =
-TypeSBG = Colorized
-ShowArrows = 1
-OneItemOnly = 1
-X = 280
+Inheritance = SongMenuSelectSlide1
 Y = 115
-W = 0
-H = 25
-Z = 0.97
-SkipX = 0
-SBGW = 220
-TextSize = 24
-Color = ColorLight
-DColor = ColorDark
-TColor = White
-TDColor = White
-SBGColor = ColorLight
-SBGDColor = ColorDark
-STColor = White
-STDColor = White
 
 [SongMenuButton4]
 X = 280
@@ -741,7 +705,7 @@ SkipX = 0
 Size = 1
 oneItemOnly = 1
 showArrows = 1
-
+Type = Transparent
 #text
 TColor = White
 TDColor = White
@@ -759,6 +723,7 @@ Size = 30
 Font = 1
 Align = 0
 Color = ColorLight
+Type = Transparent
 
 #[SongJumptoTextFound]
 #X = 270
@@ -4240,6 +4205,7 @@ Y = 587
 W = 679
 H = 6
 Color = White
+Type = Transparent
 
 [SingTimeText]
 Text = SING_TIME
@@ -4323,6 +4289,7 @@ X = 680
 Y = 316
 W = 100
 H = 8
+Type = Transparent
 
 [SingP1Avatar]
 X = 15
@@ -4331,6 +4298,7 @@ W = 40
 H = 54
 Z = 1
 Alpha = 1
+Type = Transparent
 
 # T W O  P L A Y E R   M O D E # # # # # # # # # # # # # # # # # # # #
 #Player One
@@ -9009,6 +8977,7 @@ Z = 1
 
 [SendScorePopupSelectSlide1]
 Text = SCORE_SEND_PLAYER
+Type = Transparent
 TexSBG = Rectangle
 TypeSBG = Colorized
 ShowArrows = 1
@@ -9289,6 +9258,7 @@ Y = 275
 W = 360
 H = 16
 Color = ColorDark
+Type = Transparent
 
 [Top5]
 Texts = 1
@@ -9690,6 +9660,7 @@ STColor = White
 STDColor = GrayDark
 
 [PartyOptionsSelectPlayListItems]
+Type = Transparent
 TexSBG = SelectBG
 TypeSBG = Transparent
 #Text = PARTY_PLAYLIST
@@ -13064,6 +13035,7 @@ X = 120
 Y = 385
 W = 75
 H = 100
+Type = Transparent
 
 [JukeboxStaticActualSong1]
 X = 20
@@ -13079,6 +13051,7 @@ X = 22
 Y = 27
 W = 80
 H = 100
+Type = Transparent
 
 [JukeboxTextActualSongArtist]
 X = 130
