Reordered again player selection screen items to put the button on top

--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -197,8 +197,8 @@ Tex  = MainBG
 
 #write your name
 [NameStatic1]
-X = 400
-Y = 125
+X = 50
+Y = 425
 W = 200
 H = 35
 Tex = MainBar
@@ -225,22 +225,23 @@ Align = 0
 Text = SING_PLAYER_TITLE
 
 [NameText2]
-X = 50
+X = 400
 Y = 75
 Color = White
-Font = 1
-Size = 26
-Text = SING_PLAYER_READY
+Font = 0
+Size = 32
+Align = 1
+;Text = SING_PLAYER_READY
 
 [NameText3]
 Inheritance = NameText2
-X = 400
+Y = 370
 Align = 0
 Text = SING_PLAYER_EDIT
 
 [NameText4]
-X = 420
-Y = 130
+X = 70
+Y = 430
 Color = White
 Font = 0
 Size = 22
@@ -259,8 +260,8 @@ Text = SING_PLAYER_NAME
 [NameSelectPlayerCount]
 Inheritance = OptionsSelectSlide
 Text = SING_PLAYER_COUNT
-X = 50
-Y = 125
+X = 255
+Y = 150
 W = 205
 H = 35
 Size = 5
@@ -270,8 +271,8 @@ SBGDColor = ColorDark
 SBGColor = ColorLight
 
 [NamePlayerSelectStatic1]
-X = 60
-Y = 170
+X = 120
+Y = 220
 W = 66
 H = 88
 Tex = AvatarFrame2
@@ -279,96 +280,96 @@ Color = P1Dark
 Type = Colorized
 Z = 1
 
+[NamePlayerSelectStatic2]
+Inheritance = NamePlayerSelectStatic1
+X = 220
+Color = P2Dark
+
+[NamePlayerSelectStatic3]
+Inheritance = NamePlayerSelectStatic1
+X = 320
+Color = P3Dark
+
+[NamePlayerSelectStatic4]
+Inheritance = NamePlayerSelectStatic1
+X = 420
+
+[NamePlayerSelectStatic5]
+Inheritance = NamePlayerSelectStatic1
+X = 520
+Color = P5Dark
+
+[NamePlayerSelectStatic6]
+Inheritance = NamePlayerSelectStatic1
+X = 620
+Color = P6Dark
+
 [NamePlayerSelectStatic1Text]
-X = 92
-Y = 261
+X = 152
+Y = 311
 Font = 1
 Size = 16
 Align = 1
 Color = White
 Z = 1
 
+[NamePlayerSelectStatic2Text]
+Inheritance = NamePlayerSelectStatic1Text
+X = 252
+Text = P2
+
+[NamePlayerSelectStatic3Text]
+Inheritance = NamePlayerSelectStatic1Text
+X = 352
+Text = P3
+
+[NamePlayerSelectStatic4Text]
+Inheritance = NamePlayerSelectStatic1Text
+X = 452
+Text = P4
+
+[NamePlayerSelectStatic5Text]
+Inheritance = NamePlayerSelectStatic1Text
+X = 552
+Text = P5
+
+[NamePlayerSelectStatic6Text]
+Inheritance = NamePlayerSelectStatic1Text
+X = 652
+Text = P6
+
 [NamePlayerSelectStatic1Avatar]
-X = 67
-Y = 177
+X = 127
+Y = 228
 W = 51
 H = 72
 Z = 1
 Tex = NoAvatar_P1
 Type = Transparent
 
-[NamePlayerSelectStatic2]
-Inheritance = NamePlayerSelectStatic1
-X = 160
-Color = P2Dark
-
-[NamePlayerSelectStatic2Text]
-Inheritance = NamePlayerSelectStatic1Text
-X = 192
-Text = P2
-
 [NamePlayerSelectStatic2Avatar]
 Inheritance = NamePlayerSelectStatic1Avatar
-X = 167
+X = 227
 Tex = NoAvatar_P2
-
-[NamePlayerSelectStatic3]
-Inheritance = NamePlayerSelectStatic1
-X = 260
-Color = P3Dark
-
-[NamePlayerSelectStatic3Text]
-Inheritance = NamePlayerSelectStatic1Text
-X = 292
-Text = P3
 
 [NamePlayerSelectStatic3Avatar]
 Inheritance = NamePlayerSelectStatic1Avatar
-X = 267
+X = 327
 Tex = NoAvatar_P3
-
-[NamePlayerSelectStatic4]
-Inheritance = NamePlayerSelectStatic1
-Y = 300
-
-[NamePlayerSelectStatic4Text]
-Inheritance = NamePlayerSelectStatic1Text
-Y = 389
-Text = P4
 
 [NamePlayerSelectStatic4Avatar]
 Inheritance = NamePlayerSelectStatic1Avatar
-Y = 307
+X = 427
 Tex = NoAvatar_P4
 
-[NamePlayerSelectStatic5]
-Inheritance = NamePlayerSelectStatic4
-X = 160
-Color = P5Dark
-
-[NamePlayerSelectStatic5Text]
-Inheritance = NamePlayerSelectStatic4Text
-X = 192
-Text = P5
-
 [NamePlayerSelectStatic5Avatar]
-Inheritance = NamePlayerSelectStatic4Avatar
-X = 167
+Inheritance = NamePlayerSelectStatic1Avatar
+X = 527
 Tex = NoAvatar_P5
 
-[NamePlayerSelectStatic6]
-Inheritance = NamePlayerSelectStatic4
-X = 260
-Color = P6Dark
-
-[NamePlayerSelectStatic6Text]
-Inheritance = NamePlayerSelectStatic4Text
-X = 292
-Text = P6
-
 [NamePlayerSelectStatic6Avatar]
-Inheritance = NamePlayerSelectStatic4Avatar
-X = 267
+Inheritance = NamePlayerSelectStatic1Avatar
+X = 627
 Tex = NoAvatar_P6
 
 [NamePlayerSelectCurrent]
@@ -382,8 +383,8 @@ DColor = ColorLightest
 Type = Transparent
 
 [NamePlayerAvatar]
-X = 560
-Y = 281
+X = 570
+Y = 435
 W = 67
 H = 90
 Type = Transparent
@@ -391,8 +392,8 @@ Reflection = 1
 ReflectionSpacing = 10
 
 [NamePlayerButtonAvatar]
-X = 541
-Y = 263
+X = 551
+Y = 417
 W = 107
 H = 124
 Tex = AvatarFrame
@@ -405,8 +406,8 @@ Count = 5
 Distance = 40
 
 [NamePlayerButtonName]
-X = 610
-Y = 125
+X = 260
+Y = 425
 W = 150
 H = 35
 Z = 1
@@ -427,8 +428,8 @@ Color = White
 [NameSelectPlayerColor]
 Inheritance = OptionsSelectSlide
 Text= SING_PLAYER_COLOR
-X = 400
-Y = 170
+X = 50
+Y = 470
 W = 200
 H = 35
 Size = 5
@@ -441,13 +442,13 @@ SBGColor = PlayerLight
 [NameSelectPlayerLevel]
 Inheritance = NameSelectPlayerColor
 Text = SING_PLAYER_LEVEL
-Y = 215
+Y = 515
 
 [NamePlayerSingButton]
-X = 275
-Y = 450
-W = 250
-H = 100
+X = 253
+Y = 75
+W = 290
+H = 60
 Tex = Button
 Color = ColorDark
 Int = 1
@@ -457,13 +458,13 @@ Type = Transparent
 Texts = 1
 
 [NamePlayerSingButtonText1]
-X = 125
-Y = 25
+X = 145
+Y = 15
 Color = White
-Size = 50
+Size = 30
 Font = 0
 Align = 1
-Text = SING_SING
+Text = STAT_NEXT
 
 #########################################
 #####  S O N G   S E L E C T I O N  #####
