Shown hidden lyrics with previous changes

--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -4764,41 +4764,28 @@ X = 670
 ##################################
 
 [SingLyricsDuetP2UpperBar]
-X = 80
-W = 640
+Inheritance = SingLyricsLowerBar
 Y = 493
-H = 41
 ;YOffSet (+/-) for the Sing-Indicator
 IndicatorYOffset = 3
 
 [SingLyricsDuetP2LowerBar]
-X = 80
-W = 640
-Y = 535
-H = 41
+Inheritance = SingLyricsLowerBar
 
 [SingLyricsDuetP1UpperBar]
-X = 80
-W = 640
+Inheritance = SingLyricsLowerBar
 Y = 5
-H = 41
 ;YOffSet (+/-) for the Sing-Indicator
 IndicatorYOffset = 3
 
 [SingLyricsDuetP1LowerBar]
-X = 80
-W = 640
+Inheritance = SingLyricsLowerBar
 Y = 49
-H = 41
 
 [SingStaticDuet1]
-Tex = LyricBar
-X = 0
+Inheritance = SingStatic1
 Y = -5
-W = 800
 H = 93
-Color = White
-Type = Transparent
 
 # T H R E E  P L A Y E R  D U E T  M O D E # # # # # # # # # # # # # # # # # # # #
 #Player One
