Added inheritance to oscilloscope

--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -5418,11 +5418,8 @@ Y = 372
 W = 80
 H = 6
 
-
 ## Oscilloscope Position Screen  ##
-
 # O N E  P L A Y E R  M O D E # # # # # # # # # # # # # # # # # # # #
-#PlayerOne
 [SingP1Oscilloscope]
 X = 80
 Y = 275
@@ -5430,209 +5427,134 @@ H = 30
 W = 100
 
 # T W O  P L A Y E R  M O D E # # # # # # # # # # # # # # # # # # # #
-#Player One
 [SingP1TwoPOscilloscope]
-X = 80
+Inheritance = SingP1Oscilloscope
 Y = 95
-H = 30
-W = 100
 
-#Player Two
 [SingP2ROscilloscope]
-X = 80
+Inheritance = SingP1Oscilloscope
 Y = 285
-H = 30
-W = 100
 
 # T H R E E  P L A Y E R  M O D E # # # # # # # # # # # # # # # # # # # #
-#Player One
 [SingP1ThreePOscilloscope]
+Inheritance = SingP1Oscilloscope
 X = 15
 Y = 15
-H = 30
 W = 160
 
-#Player Two
 [SingP2MOscilloscope]
+Inheritance = SingP1ThreePOscilloscope
 X = 310
-Y = 15
-H = 30
-W = 160
 
-#Player Three
 [SingP3ROscilloscope]
+Inheritance = SingP1ThreePOscilloscope
 X = 610
-Y = 15
-H = 30
-W = 160
 
 # T H R E E  P L A Y E R  D U E T  M O D E # # # # # # # # # # # # # # # # # # # #
-#Player One
 [SingDuetP1ThreePOscilloscope]
+Inheritance = SingP1Oscilloscope
 X = 56
 Y = 110
 H = 25
-W = 100
 
-#Player Two
 [SingDuetP2MOscilloscope]
-X = 56
+Inheritance = SingDuetP1ThreePOscilloscope
 Y = 235
-H = 25
-W = 100
 
-#Player Three
 [SingDuetP3ROscilloscope]
-X = 56
+Inheritance = SingDuetP1ThreePOscilloscope
 Y = 360
-H = 25
-W = 100
 
 ## 4/6 Players One Screen  ##
-
 # FOUR  P L A Y E R   M O D E # # # # # # # # # # # # # # # # # # # #
-#Player One
 [SingP1FourPOscilloscope]
+Inheritance = SingP1Oscilloscope
 X = 22
 Y = 25
-H = 30
 W = 157
 
-#Player Two
 [SingP2FourPOscilloscope]
+Inheritance = SingP1FourPOscilloscope
 X = 222
-Y = 25
-H = 30
-W = 157
 
-#Player Three
 [SingP3FourPOscilloscope]
+Inheritance = SingP1FourPOscilloscope
 X = 422
-Y = 25
-H = 30
-W = 157
 
-#Player Four
 [SingP4FourPOscilloscope]
+Inheritance = SingP1FourPOscilloscope
 X = 622
-Y = 25
-H = 30
-W = 157
 
 # SIX  P L A Y E R   M O D E # # # # # # # # # # # # # # # # # # # #
-#Player One
 [SingP1SixPOscilloscope]
+Inheritance = SingP1Oscilloscope
 X = 20
 Y = 8
-H = 30
-W = 100
 
-#Player Two
 [SingP2SixPOscilloscope]
+Inheritance = SingP1SixPOscilloscope
 X = 150
-Y = 8
-H = 30
-W = 100
 
-#Player Three
 [SingP3SixPOscilloscope]
+Inheritance = SingP1SixPOscilloscope
 X = 280
-Y = 8
-H = 30
-W = 100
 
-#Player Four
 [SingP4SixPOscilloscope]
+Inheritance = SingP1SixPOscilloscope
 X = 410
-Y = 8
-H = 30
-W = 100
 
-#Player Five
 [SingP5SixPOscilloscope]
+Inheritance = SingP1SixPOscilloscope
 X = 540
-Y = 8
-H = 30
-W = 100
 
-#Player Six
 [SingP6SixPOscilloscope]
+Inheritance = SingP1SixPOscilloscope
 X = 670
-Y = 8
-H = 30
-W = 100
 
 # FOUR DUET P L A Y E R   M O D E # # # # # # # # # # # # # # # # # # # #
-#Player One
 [SingP1DuetFourPOscilloscope]
+Inheritance = SingP1Oscilloscope
 X = 60
 Y = 118
 H = 25
-W = 100
 
-#Player Two
 [SingP2DuetFourPOscilloscope]
-X = 60
+Inheritance = SingP1DuetFourPOscilloscope
 Y = 298
-H = 25
-W = 100
 
-#Player Three
 [SingP3DuetFourPOscilloscope]
+Inheritance = SingP1DuetFourPOscilloscope
 X = 430
 Y = 118
-H = 25
-W = 100
 
-#Player Four
 [SingP4DuetFourPOscilloscope]
-X = 430
+Inheritance = SingP3DuetFourPOscilloscope
 Y = 298
-H = 25
-W = 100
 
 # SIX  DUET P L A Y E R   M O D E # # # # # # # # # # # # # # # # # # # #
-#Player One
 [SingP1DuetSixPOscilloscope]
-X = 60
+Inheritance = SingP1DuetFourPOscilloscope
 Y = 107
-H = 25
-W = 100
 
-#Player Two
 [SingP2DuetSixPOscilloscope]
-X = 60
+Inheritance = SingP1DuetFourPOscilloscope
 Y = 236
-H = 25
-W = 100
 
-#Player Three
 [SingP3DuetSixPOscilloscope]
-X = 60
+Inheritance = SingP1DuetFourPOscilloscope
 Y = 362
-H = 25
-W = 100
 
-#Player Four
 [SingP4DuetSixPOscilloscope]
-X = 430
+inheritance = SingP3DuetFourPOscilloscope
 Y = 107
-H = 25
-W = 100
 
-#Player Five
 [SingP5DuetSixPOscilloscope]
-X = 430
+inheritance = SingP3DuetFourPOscilloscope
 Y = 236
-H = 25
-W = 100
 
-#Player Six
 [SingP6DuetSixPOscilloscope]
-X = 430
+inheritance = SingP3DuetFourPOscilloscope
 Y = 362
-H = 25
-W = 100
 
 [Score]
 Texts = 1
