Extracted chessboard hover cover from scroll to increase performance and rebuilded preview to unified all modes

--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -1068,6 +1068,10 @@ Y = 150
 H = 150
 Cols = 5
 
+[SongRouletteMainCover]
+Inheritance = SongSlideMainCover
+Y = 108
+
 [SongRouletteEqualizer]
 Inheritance = SongEqualizer
 
@@ -1533,16 +1537,19 @@ X = 240
 Y = 100
 W = 80
 H = 90
-SelectX = 10
-SelectY = 100
-SelectW = 195
-SelectH = 170
 ZoomThumbW = 100
-ZoomThumbH = 120
+ZoomThumbH = 112
 Rows = 4
 Cols = 6
 Padding = 2
 Reflections = 0
+
+[SongChessboardMainCover]
+X = 10
+Y = 100
+W = 195
+H = 170
+Type = Transparent
 
 [SongChessboardEqualizer]
 Inheritance = SongEqualizer
@@ -1977,6 +1984,9 @@ Tex = SongBG
 Inheritance = SongSlideCover
 Cols = 3
 
+[SongCarouselMainCover]
+Inheritance = SongSlideMainCover
+
 [SongCarouselEqualizer]
 Inheritance = SongEqualizer
 Y = 500
@@ -2307,6 +2317,11 @@ W = 325
 H = 200
 Rows = 3
 Cols = 1
+
+[SongSlotMachineMainCover]
+Inheritance = SongSlotMachineCover
+W = 200
+Type = Transparent
 
 [SongSlotMachineEqualizer]
 Inheritance = SongEqualizer
@@ -2770,6 +2785,11 @@ Cols = 11
 Padding = 60
 Reflections = 1
 
+[SongSlideMainCover]
+Inheritance = SongSlideCover
+Reflection = 0
+Type = Transparent
+
 [SongSlideEqualizer]
 Inheritance = SongEqualizer
 Y = 500
@@ -3177,16 +3197,19 @@ Y = 95
 W = 55
 H = 70
 Z = 0.95
-SelectX = 555
-SelectY = 338
-SelectW = 215
-SelectH = 161
 SelectReflection = 0
 SelectReflectionSpacing = 0
 Cols = 1
 Rows = 5
 Padding = 12
 Reflections = 0
+
+[SongListMainCover]
+X = 555
+Y = 338
+W = 215
+H = 161
+Type = Transparent
 
 [SongListEqualizer]
 Inheritance = SongEqualizer
@@ -3671,16 +3694,19 @@ X = 45
 Y = 90
 W = 120
 H = 135
-SelectX = 180
-SelectY = 90
-SelectW = 355
-SelectH = 278
 ZoomThumbW = 125
 ZoomThumbH = 140
 Rows = 3
 Cols = 1
 Padding = 4
 Reflections = 0
+
+[SongMosaicMainCover]
+X = 180
+Y = 90
+W = 355
+H = 278
+Type = Transparent
 
 [SongMosaicEqualizer]
 Inheritance = SongEqualizer
